kubernetes-fundamentals/ingress/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  defaultBackend:
    service:
      name: example-service
      port: 80
